tests/baselines/reference/parserEqualsGreaterThanAfterFunction2.errors.txt
parserEqualsGreaterThanAfterFunction2.ts(1,9): error TS7010: '(Missing)', which lacks return-type annotation, implicitly has an 'any' return type.
parserEqualsGreaterThanAfterFunction2.ts(1,10): error TS1003: Identifier expected.
parserEqualsGreaterThanAfterFunction2.ts(1,11): error TS7006: Parameter 'a' implicitly has an 'any' type.
parserEqualsGreaterThanAfterFunction2.ts(1,13): error TS1005: ',' expected.
parserEqualsGreaterThanAfterFunction2.ts(1,16): error TS7006: Parameter 'b' implicitly has an 'any' type.
parserEqualsGreaterThanAfterFunction2.ts(1,17): error TS1005: ',' expected.
parserEqualsGreaterThanAfterFunction2.ts(1,18): error TS1005: ')' expected.


==== parserEqualsGreaterThanAfterFunction2.ts (7 errors) ====
    function (a => b;
            
!!! error TS7010: '(Missing)', which lacks return-type annotation, implicitly has an 'any' return type.
             ~
!!! error TS1003: Identifier expected.
              ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
                ~~
!!! error TS1005: ',' expected.
                   ~
!!! error TS7006: Parameter 'b' implicitly has an 'any' type.
                    ~
!!! error TS1005: ',' expected.
                     
!!! error TS1005: ')' expected.